--- a/data/server.cfg
+++ b/data/server.cfg
@@ -5,30 +5,17 @@
 #   https://docs.fivem.net/docs/server-manual/setting-up-a-server/
 
 ## You SHOULD edit the following:
-sv_hostname "Back In The Town RP built with CFX Default FiveM!"
-sets sv_projectName "[CFX Default FiveM] Back In The Town RP"
-sets sv_projectDesc "Recipe for the base resources required to run a minimal FiveM server."
-sets tags "default, deployer"
+sv_hostname "Back In The Town RP"
+sets sv_projectName "Back In The Town"
+sets sv_projectDesc "Realism Semi-Serious Hood Roleplay Server"
+sets tags "realism, deployer, qbcore, police, content, friendly, custom, ems, economy, serious, roleplay"
 sets locale "root-AQ"
 
 ## You CAN edit the following:
-sv_enforceGameBuild 3095 #mp2023_02 - The Chop Shop
+sv_enforceGameBuild 3258 #mp2023_02 - The Chop Shop
 sv_licenseKey "cfxk_1hLw9TajoNDOXCgnzbQti_2PG6fv"
-sv_maxclients 48
+sv_maxclients 100
 endpoint_add_tcp "0.0.0.0:30120"
 endpoint_add_udp "0.0.0.0:30120"
 set steam_webApiKey "none"
-set resources_useSystemChat true
-
-## These resources will start by default.
-ensure mapmanager
-ensure chat
-ensure spawnmanager
-ensure sessionmanager
-ensure basic-gamemode
-ensure hardcap
-
-## Add system admins
-add_ace group.admin command allow # allow all commands
-add_ace group.admin command.quit deny # but don't allow quit
-add_principal identifier.fivem:8004449 group.admin #RealKeemOutside
+# set resources_useSystemChat true
