added more folder & logo

--- a/data/server.cfg
+++ b/data/server.cfg
@@ -19,3 +19,5 @@ endpoint_add_tcp "0.0.0.0:30120"
 endpoint_add_udp "0.0.0.0:30120"
 set steam_webApiKey "none"
 # set resources_useSystemChat true
+
+ensure [cfx-stocks]
