--- a/data/server.cfg
+++ b/data/server.cfg
@@ -20,4 +20,5 @@ endpoint_add_udp "0.0.0.0:30120"
 set steam_webApiKey "none"
 # set resources_useSystemChat true
 
+### Voice Configuration
 ensure [cfx-stocks]
